--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>For My Love 💌</title>
+  <title>yousef <3 </title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>💖 To My Love 💖</h1>
+    <h1>to my baby :*</h1>
 
     <p class="letter">
-      Hey babe,<br><br>
-      I just wanted to make something special and cute to remind you how much I love you. Thank you for being so sweet, funny, and patient with me. You mean more to me than words can say.<br><br>
-      Forever and always,  
+      dear yousef,,, <br><br>
+there are so many species that mate for life. swans, for example, once they find each other, they love, grow, raise families, and experience life together. i think of that often because i found you on July 14th, 2019, and since then, nothing has ever been the same. i've loved you with my whole being since 2021 and i'm committing my life to you. i want to grow old with you, i want to die with you by my side. i look forward to the day when we finally get to wake up together everyday!! to watch shows cuddled up on the couch and our bed, to go on cute little walks when the weather is nice, to watch the birds eat the seeds we give them, to feed cats around the neighborhood, and to play with max and our new kitty. more importantly, i can't wait to kiss you, hug you, and support & uplift you every chance i get. i want to share everything i am with you, my soul, my heart, my body, and my mind, and anything that i could call mine. i love you many things about you but some of my absolute favorites are how no matter what i'm going through emotionally, you always know how to take care of me. i like when you notice that i'm upset and you always insist on talking to me about it even when i pretend i do not want to (i do!!) i love the sweet little noises you make when you're sleeping it actually makes me melt. you look so innocent and peaceful it makes me want to eat you! being with you makes me feel soft and safe. you're everything i've ever wanted. i love how smart and gentle you are. i can ask you anything, even things i feel silly for not knowing, you respond with kindness instead of judgement. you're such a hard worker and you always provide me with things i need and want! even though i have my own job, you let me save my money ( to buy u gifts hehehe). i wanted to remind you of an interview that i resonate with deeply: "it's like.. when you love someone so much and your fear of losing someone is so deep.. i want your psycho, i want your ugly.. i want all of the most disgusting parts of you that you think nobody will love, i love all of those things." i love all of you. every side, every layer, every version of you. i want to be with you as long as we're alive, and i hope we will find each other after this life ends. you are my swan. you are my soulmate. i'm so very glad i met you and i love you forever and always.. til the end of time. eternally yours, rita.  
       <br>💌 Your Rita
     </p>
 
@@ -26,7 +25,7 @@
 
   <div class="cursor-heart">❤️</div>
 
-  <!-- Heart cursor -->
+
   <script>
     const cursor = document.querySelector(".cursor-heart");
     document.addEventListener("mousemove", (e) => {
@@ -35,7 +34,7 @@
     });
   </script>
 
-  <!-- Slideshow -->
+
   <script>
     let currentSlide = 0;
     const slides = document.querySelectorAll('.slide');
@@ -55,11 +54,11 @@
     showSlide(currentSlide);
   </script>
 
-  <!-- Falling hearts -->
+
   <script>
     setInterval(() => {
       const heart = document.createElement("div");
-      heart.innerText = "💗";
+      heart.innerText = "<3";
       heart.style.position = "fixed";
       heart.style.left = Math.random() * 100 + "vw";
       heart.style.top = "-2em";
@@ -70,7 +69,7 @@
     }, 500);
   </script>
 
-  <!-- Sparkles on click -->
+
   <script>
     document.addEventListener("click", (e) => {
       for (let i = 0; i < 5; i++) {
