--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ there are so many species that mate for life. swans, for example, once they find
       <img src="images/us1.jpg" class="slide" />
       <img src="images/us2.jpg" class="slide" />
       <img src="images/us3.jpg" class="slide" />
+          <img src="images/us4.jpg" class="slide" />
     </div>
   </div>
 
