--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ there are so many species that mate for life. swans, for example, once they find
 
     <div class="slideshow">
       <img src="images/us1.jpg" class="slide" />
-      <img src="images/us2.jpg" class="slide" />
+      <img src="images/IMG_8704_Original.jpg" class="slide" />
       <img src="images/us3.jpg" class="slide" />
           <img src="images/us4.jpg" class="slide" />
     </div>
