--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ there are so many species that mate for life. swans, for example, once they find
       <img src="images/IMG_8704_Original.jpg" class="slide" />
       <img src="images/us3.jpg" class="slide" />
           <img src="images/us4.jpg" class="slide" />
+          <img src="images/us5.jpg" class="slide" />
+          <img src="images/us6.jpg" class="slide" />
     </div>
   </div>
 
