--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ there are so many species that mate for life. swans, for example, once they find
       <img src="images/us3.jpg" class="slide" />
           <img src="images/us4.jpg" class="slide" />
           <img src="images/image.jpg" class="slide" />
-          <img src="images/us6.jpg" class="slide" />
+          <img src="images/11.jpg" class="slide" />
     </div>
   </div>
 
